--- a/2header.css
+++ b/2header.css
@@ -1,3 +1,16 @@
+header {
+    background-color: #4f8699;
+}
+
+.logo {
+    height: auto;
+    width: 6rem;
+}
+
+.logo img {
+    width: 100%;
+}
+
 .search_library {
     padding-right: 1.5rem;
     padding-left: .5rem;
@@ -12,7 +25,7 @@
 }
 
 .search_library .text {
-    width: 90%;
+    width: 50%;
 }
 
 .text input {
@@ -28,7 +41,7 @@
     padding-left: 3rem;
 }
 
-.nav_icons{
+.nav_icons {
     width: 10%;
     display: flex;
     align-items: center;
@@ -36,22 +49,22 @@
     justify-content: flex-end;
 }
 
-.nav_icons img{
+.nav_icons img {
     width: 1.5rem;
     height: auto;
 }
 
-.dropdown{
+.dropdown {
     position: relative;
     display: inline-block;
 }
 
-.dropdown-btn{
+.dropdown-btn {
     background-color: transparent;
     border: none;
 }
 
-.dropdown-btn img{
+.dropdown-btn img {
     width: 1.5rem;
     display: block;
 }
@@ -69,11 +82,11 @@
     background-color: white;
     min-width: 160px;
     border-radius: 8px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.15);
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.15);
     padding: 0.5rem 0;
 }
 
-.dropdown-content.show{
+.dropdown-content.show {
     opacity: 1;
     visibility: visible;
     transform: translateY(0);
@@ -88,8 +101,18 @@
     font-size: 0.9rem;
 }
 
+.dropdown-content p {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    font-family: sans-serif;
+    font-size: 0.9rem;
+    display: flex;
+    justify-content: center;
+
+}
+
 .dropdown-content a:hover {
     background-color: #f1f1f1;
 }
-
-
