--- a/2body.css
+++ b/2body.css
@@ -1,6 +1,6 @@
 .grid {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(200px, 50px));
+    grid-template-columns: repeat(auto-fit, minmax(165px, 50px));
     padding: var(--padding-s);
     gap: 15px;
 }
@@ -8,11 +8,49 @@
 .grid-item {
     text-align: center;
     padding: var(--padding-s);
+    transition: transform 0.6s, background-color 0.2s;
 }
 
-/* ANTES: .grid div img */
 .grid-item img {
     width: 100%;
     height: auto;
     display: block;
+}
+
+.grid-item a {
+    text-decoration: none;
+    color: inherit;
+}
+
+.grid-item img,
+.grid-item .placeholder-capa {
+    width: 100%;
+    aspect-ratio: 2 / 3;
+    object-fit: cover;
+    display: block;
+    background-color: #2c3e50;
+    /* Fundo para placeholders */
+}
+
+.placeholder-capa {
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-weight: bold;
+    font-size: 14px;
+}
+
+.grid-item-titulo {
+    font-weight: 600;
+    padding: 15px 10px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+
+.grid-item:hover {
+    transform: translateY(-4px);
+    background-color: #f0f0f0;
 }
